# CmpMLBindings

./: .gitignore  README.md  analysis.ipynb  cliffdelta.py  preparedata.py  random_seeds.txt
data/pytorch/gru/dotnet/: deploy_eval_CPU_states.txt  deploy_eval_CUDA_states.txt  roc_aucs_0.json  roc_aucs_1.json  roc_aucs_2.json  roc_aucs_3.json  roc_aucs_4.json  testing_errors_0.txt  testing_errors_1.txt  testing_errors_2.txt  testing_errors_3.txt  testing_errors_4.txt  time_cost_CUDA_0.txt  time_cost_CUDA_1.txt  time_cost_CUDA_2.txt  time_cost_CUDA_3.txt  time_cost_CUDA_4.txt  training_errors_0.txt  training_errors_1.txt  training_errors_2.txt  training_errors_3.txt  training_errors_4.txt
data/pytorch/gru/py/: deploy_eval_cpu_serialization_scripted.json  deploy_eval_cpu_states_scripted.json  deploy_eval_gpu_serialization_scripted.json  deploy_eval_gpu_states_scripted.json  roc_aucs_0.json  roc_aucs_1.json  roc_aucs_2.json  roc_aucs_3.json  roc_aucs_4.json  testing_errors_0.txt  testing_errors_1.txt  testing_errors_2.txt  testing_errors_3.txt  testing_errors_4.txt  time_cost_gpu_0.json  time_cost_gpu_1.json  time_cost_gpu_2.json  time_cost_gpu_3.json  time_cost_gpu_4.json  training_errors_0.txt  training_errors_1.txt  training_errors_2.txt  training_errors_3.txt  training_errors_4.txt
data/pytorch/gru/rs/: deploy_eval_Cpu_serialization_scripted.txt  deploy_eval_Cpu_states_scripted.txt  deploy_eval_Cuda(0)_serialization_scripted.txt  deploy_eval_Cuda(0)_states_scripted.txt  roc_aucs_0.json  roc_aucs_1.json  roc_aucs_2.json  roc_aucs_3.json  roc_aucs_4.json  testing_errors_0.txt  testing_errors_1.txt  testing_errors_2.txt  testing_errors_3.txt  testing_errors_4.txt  time_cost_0.txt  time_cost_1.txt  time_cost_2.txt  time_cost_3.txt  time_cost_4.txt  training_errors_0.txt  training_errors_1.txt  training_errors_2.txt  training_errors_3.txt  training_errors_4.txt
data/pytorch/gru/ts/: deploy_eval_cpu_serialization_scripted.txt  deploy_eval_gpu_serialization_scripted.txt
data/pytorch/lenet1/dotnet/: deploy_eval_CPU_states.txt  deploy_eval_CUDA_states.txt  roc_aucs_0.json  roc_aucs_1.json  roc_aucs_2.json  roc_aucs_3.json  roc_aucs_4.json  testing_errors_0.txt  testing_errors_1.txt  testing_errors_2.txt  testing_errors_3.txt  testing_errors_4.txt  time_cost_CUDA_0.txt  time_cost_CUDA_1.txt  time_cost_CUDA_2.txt  time_cost_CUDA_3.txt  time_cost_CUDA_4.txt  training_errors_0.txt  training_errors_1.txt  training_errors_2.txt  training_errors_3.txt  training_errors_4.txt
data/pytorch/lenet1/py/: deploy_eval_cpu_serialization_scripted.json  deploy_eval_cpu_states_scripted.json  deploy_eval_gpu_serialization_scripted.json  deploy_eval_gpu_states_scripted.json  testing_errors_0.txt  testing_errors_1.txt  testing_errors_2.txt  testing_errors_3.txt  testing_errors_4.txt  time_cost_gpu_0.json  time_cost_gpu_1.json  time_cost_gpu_2.json  time_cost_gpu_3.json  time_cost_gpu_4.json  training_errors_0.txt  training_errors_1.txt  training_errors_2.txt  training_errors_3.txt  training_errors_4.txt
data/pytorch/lenet1/rs/: deploy_eval_Cpu_serialization_scripted.txt  deploy_eval_Cpu_states_scripted.txt  deploy_eval_Cuda(0)_serialization_scripted.txt  deploy_eval_Cuda(0)_states_scripted.txt  testing_errors_0.txt  (+14 more)
tensorflow_bindings/dotnet/lenet_tf_dotnet/: Program.cs  README.md  lenet_tf_dotnet.csproj  run.sh  run_seed.sh
tensorflow_bindings/py/cv/: README.md  aucroc.sh  cal_aucroc.py  environment.yml  keras_early_stop.py  pred.sh  run.py  run.sh  run_seed.sh  saved_init_model.py  tf_lenet.py  tf_resnet.py  tf_rnns.py  tf_vgg.py  trans_models.py
tensorflow_bindings/rs/lenet_tf_rs/: Cargo.toml  README.md  run.sh
tensorflow_bindings/rs/lenet_tf_rs/src/: dataset_loader.rs  graph_model.rs  main.rs  mnist_model.rs  momentum_optimizer.rs  serialization_model.rs  vgg_model.rs
tensorflow_bindings/ts/: README.md
tensorflow_bindings/ts/cv/: package-lock.json  package.json  run.sh  run_seed.sh  tsconfig.json
torch_bindings/dotnet/lenet_tch_dotnet/: Program.cs  README.md  lenet_tch_dotnet.csproj  run.sh  run_seed.sh
torch_bindings/py/: README.md  environment.yml  requirements.txt
torch_bindings/py/cv/: aucroc.sh  cal_aucroc.py  importsd.py  pred.sh  pyimporttest.py  run.py  run.sh  run_seed.sh  tch_config.py  tch_datasets.py  tch_lenet.py  tch_resnet.py  tch_rnns.py  tch_vgg.py  trans_models.py
torch_bindings/rs/lenet_tch/: Cargo.toml  README.md  run.sh  run_seed.sh
torch_bindings/ts/deploy_lenet_tch/: README.md  history  package-lock.json  package.json  run.sh  tsconfig.json
torch_bindings/ts/deploy_lenet_tch/guide_to_build_deps/: CMakeLists.txt  howtobuild.txt
(+570 files in other folders)
