[package]
name = "lenet_tf_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.17.0" }
anyhow = "1.0.43"
rand = "0.8.4"
structopt = "0.3.25"

[features]
# Enables parallel processing support by enabling the "rayon" feature of jpeg-decoder.
gpu = ["tensorflow/tensorflow_gpu"]
